# baba

./: .gitignore  Cargo.toml  README.md  package.json
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 0001_init.sql
backend/scripts/: db-windows.sh  db.sh
backend/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  password.rs  state.rs  token.rs
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AuthLayout.tsx  Spinner.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/: compute.rs  main.rs  server.rs
